chore: Update .env.example with OpportunityRadar configuration

--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,12 @@ NODE_ENV=development
 # ===================================
 
 # MongoDB Connection String
-# Local: mongodb://localhost:27017/ideas-browser
-# Atlas: mongodb+srv://user:password@cluster.mongodb.net/ideas-browser
-MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/ideas-browser
+# Local: mongodb://localhost:27017/opportunity-radar
+# Atlas: mongodb+srv://user:password@cluster.mongodb.net/opportunity-radar
+MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/opportunity-radar
 
 # Database Name
-DB_NAME=ideas-browser
+DB_NAME=opportunity-radar
 
 # ===================================
 # SERVER CONFIGURATION
